--- a/src/pages/introMission5/IntroMission5.css
+++ b/src/pages/introMission5/IntroMission5.css
@@ -15,11 +15,22 @@
   position: relative;
   top: -8vh;
   border: none;
-  font-size: 8vw;
+  font-size: 3vw;
 }
 
 .dont-forget-paragrapgh {
   position: absolute;
   top: 8vh;
   color: #b3faa0;
+}
+
+@media only screen and (max-width: 768px) {
+  .move-to-palmach-website-btn {
+    top: -8vh;
+    font-size: 8vw;
+  }
+
+  .dont-forget-paragrapgh {
+    top: 8vh;
+  }
 }
