fixed mission5 answer paragraph

--- a/src/pages/mission5/Mission5.css
+++ b/src/pages/mission5/Mission5.css
@@ -90,7 +90,11 @@
   .answer-paragrapgh-mission-5 {
     position: relative;
     top: 5vh;
-    visibility: hidden;
+    /* visibility: hidden; */
     margin-top: 11vh;
+    font-size: 6vw;
+  }
+  .visible {
+    visibility: visible;
   }
 }
