--- a/src/pages/mission3/Mission3.css
+++ b/src/pages/mission3/Mission3.css
@@ -1,3 +1,10 @@
+.answer-paragrapgh-mission-3 {
+  width: 70vw;
+  top: 71vh;
+  margin-top: 7vh;
+  font-size: 2vw;
+  color: #b3faa0;
+}
 .mission3-instruction-paragrapgh {
   top: -11vh;
 }
@@ -41,19 +48,21 @@
   top: -12vh;
 }
 
-.answer-paragrapgh-mission-3 {
-  width: 70vw;
-  top: 65vh;
-  font-size: 5vw;
-  color: #b3faa0;
-}
-
 .correct {
   background-color: #64cc48b3;
 }
 
 .wrong {
   background-color: #eb5258bd;
+}
+@media only screen and (max-width: 768px) {
+  .answer-paragrapgh-mission-3 {
+    width: 70vw;
+    top: 65vh;
+    top: 61vh;
+    font-size: 5vw;
+    color: #b3faa0;
+  }
 }
 
 /* .check-btn-mission3 {
